; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/gp2x/extr_plat.c_gp2x_make_fb_bufferable.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/gp2x/extr_plat.c_gp2x_make_fb_bufferable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@WCB_B_BIT = common dso_local global i32 0, align 4
@gp2x_screens = common dso_local global i32* null, align 8
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [30 x i8] c"could not make fb buferable.\0A\00", align 1
@.str.1 = private unnamed_addr constant [20 x i8] c"made fb buferable.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @gp2x_make_fb_bufferable(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  %4 = load i32, i32* %2, align 4
  %5 = icmp ne i32 %4, 0
  %6 = zext i1 %5 to i64
  %7 = select i1 %5, i32 1, i32 0
  store i32 %7, i32* %2, align 4
  %8 = load i32, i32* @WCB_B_BIT, align 4
  %9 = load i32, i32* %2, align 4
  %10 = load i32*, i32** @gp2x_screens, align 8
  %11 = getelementptr inbounds i32, i32* %10, i64 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @warm_change_cb_range(i32 %8, i32 %9, i32 %12, i32 153600)
  %14 = load i32, i32* %3, align 4
  %15 = or i32 %14, %13
  store i32 %15, i32* %3, align 4
  %16 = load i32, i32* @WCB_B_BIT, align 4
  %17 = load i32, i32* %2, align 4
  %18 = load i32*, i32** @gp2x_screens, align 8
  %19 = getelementptr inbounds i32, i32* %18, i64 1
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @warm_change_cb_range(i32 %16, i32 %17, i32 %20, i32 153600)
  %22 = load i32, i32* %3, align 4
  %23 = or i32 %22, %21
  store i32 %23, i32* %3, align 4
  %24 = load i32, i32* @WCB_B_BIT, align 4
  %25 = load i32, i32* %2, align 4
  %26 = load i32*, i32** @gp2x_screens, align 8
  %27 = getelementptr inbounds i32, i32* %26, i64 2
  %28 = load i32, i32* %27, align 4
  %29 = call i32 @warm_change_cb_range(i32 %24, i32 %25, i32 %28, i32 153600)
  %30 = load i32, i32* %3, align 4
  %31 = or i32 %30, %29
  store i32 %31, i32* %3, align 4
  %32 = load i32, i32* @WCB_B_BIT, align 4
  %33 = load i32, i32* %2, align 4
  %34 = load i32*, i32** @gp2x_screens, align 8
  %35 = getelementptr inbounds i32, i32* %34, i64 3
  %36 = load i32, i32* %35, align 4
  %37 = call i32 @warm_change_cb_range(i32 %32, i32 %33, i32 %36, i32 153600)
  %38 = load i32, i32* %3, align 4
  %39 = or i32 %38, %37
  store i32 %39, i32* %3, align 4
  %40 = load i32, i32* %3, align 4
  %41 = icmp ne i32 %40, 0
  br i1 %41, label %42, label %45

42:                                               ; preds = %1
  %43 = load i32, i32* @stderr, align 4
  %44 = call i32 @fprintf(i32 %43, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0))
  br label %47

45:                                               ; preds = %1
  %46 = call i32 @printf(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i64 0, i64 0))
  br label %47

47:                                               ; preds = %45, %42
  ret void
}

declare dso_local i32 @warm_change_cb_range(i32, i32, i32, i32) #1

declare dso_local i32 @fprintf(i32, i8*) #1

declare dso_local i32 @printf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
